# SViGGLe

./: .gitignore  CMakeLists.txt  README.md
src/SVGL/: Document.cc  Document.hh  Elements.hh  Render.hh  SVGL.hh  SVGLDocument.cc  SVGLDocument.hh  SVGLParser.cc  SVGLParser.hh  SVGParser.cc  SVGParser.hh
src/SVGL/BaseParser/: BaseParser.cc  BaseParser.hh
src/SVGL/Buffer/: BufferContour.cc  BufferContour.hh  BufferPolygon.cc  BufferPolygon.hh  BufferingState.hh
src/SVGL/CSS/: CSS.hh  CSSCalculable.cc  CSSCalculable.hh  CSSCalculableCache.cc  CSSCalculableCache.hh  CSSColor.cc  CSSColor.hh  CSSElement.hh  CSSParser.cc  CSSParser.hh  CSSProperty.cc  CSSProperty.hh  CSSPropertySet.cc  CSSPropertySet.hh  CSSSelectors.hh  CSSSizeContext.cc  CSSSizeContext.hh  CSSStructures.hh  CSSStyle.cc  CSSStyle.hh  CSSStyleSheet.cc  CSSStyleSheet.hh  CSSStyleSheetIndex.cc  CSSStyleSheetIndex.hh  CSSValues.hh
src/SVGL/Elements/: ElementsAttribute.cc  ElementsAttribute.hh  ElementsCircle.cc  ElementsCircle.hh  ElementsElement.cc  ElementsElement.hh  ElementsEllipse.cc  ElementsEllipse.hh  ElementsGroup.cc  ElementsGroup.hh  ElementsLine.cc  ElementsLine.hh  ElementsPath.cc  ElementsPath.hh  ElementsPointsParser.hh  ElementsPolyLine.cc  ElementsPolyLine.hh  ElementsPolygon.cc  ElementsPolygon.hh  ElementsRect.cc  ElementsRect.hh  ElementsTag.cc  ElementsTag.hh  ElementsTypes.hh  ElementsViewPort.cc  ElementsViewPort.hh  PathCommands.hh
src/SVGL/Font/: FontCollection.cc  FontCollection.hh  FontFace.cc  FontFace.hh  FontFamily.cc  FontFamily.hh  FontFile.cc  FontFile.hh  FontFixedSizeMap.cc  FontFixedSizeMap.hh  FontGlyph.cc  FontGlyph.hh  FontGlyphBuffer.cc  FontGlyphBuffer.hh  FontStyleMap.cc  FontStyleMap.hh  FontStyledFace.cc  FontStyledFace.hh  FontStyledFaceKey.cc  FontStyledFaceKey.hh
src/SVGL/Fonts/: FontsCollection.cc  FontsCollection.hh  FontsFace.cc  FontsFace.hh  FontsFamily.cc  FontsFamily.hh  FontsFile.cc  FontsFixedSizeMap.cc  FontsFixedSizeMap.hh  FontsGlyph.cc  FontsGlyph.hh  FontsGlyphBuffer.cc  FontsGlyphBuffer.hh  FontsStyleMap.cc  FontsStyleMap.hh  FontsStyledFace.cc  FontsStyledFace.hh  FontsStyledFaceKey.cc  FontsStyledFaceKey.hh
src/SVGL/GL/: gl.h
src/SVGL/Images/: ImagesCollection.cc  ImagesCollection.hh  ImagesImage.cc  ImagesImage.hh  ImagesPNG.cc  ImagesPNG.hh
src/SVGL/Path/: PathClosePath.cc  PathClosePath.hh  PathCommand.hh  PathCommandSet.hh  PathCommands.hh  PathCubicTo.cc  PathCubicTo.hh  PathEllipticalTo.cc  PathEllipticalTo.hh  PathLineTo.cc  PathLineTo.hh  PathMoveTo.cc  PathMoveTo.hh  PathParser.cc  PathParser.hh
src/SVGL/PathCommands/: PathCommands.hh  PathCommandsClosePath.cc  PathCommandsClosePath.hh  PathCommandsCommand.hh  PathCommandsCubicTo.cc  PathCommandsCubicTo.hh  PathCommandsEllipticalTo.cc  PathCommandsEllipticalTo.hh  PathCommandsLineTo.cc  PathCommandsLineTo.hh  PathCommandsList.hh  PathCommandsMoveTo.cc  PathCommandsMoveTo.hh  PathCommandsParser.cc  PathCommandsParser.hh
src/SVGL/Render/: RenderContext.cc  RenderContext.hh  RenderPathBuffer.cc  RenderPathBuffer.hh  RenderStroke.cc  RenderStroke.hh  RenderTessellation.cc  RenderTessellation.hh  RenderTexture.cc  RenderTexture.hh
src/SVGL/Stroke/: StrokeCap.cc  StrokeDash.cc  StrokeJoin.cc  StrokeJoin.hh
src/SVGL/Styles/: StyleGraphic.cc  StyleGraphic.hh  StyleSVG.cc  StyleSVG.hh  StyleShape.cc  StyleShape.hh  (+17 more)
test/src/: CSSTest.hh  RenderTest.hh  SVGTest.hh  XMLTest.hh  main.cc  screenshot.cc  screenshot.hh
(+219 files in other folders)
